--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
 }
 body {
   overflow-x: hidden;
+  background-color: var(--background);
 }
 
 /* button */
@@ -79,6 +80,7 @@ nav ul {
   color: var(--text);
 }
 nav ul li a {
+  font-size: 16px;
   color: var(--text);
   text-decoration: none;
   transition: color 0.5s ease;
@@ -92,15 +94,14 @@ nav ul li a:hover {
 /* home */
 .hero-wrapper {
   background-image: url("./assets/hero/hero-img.png");
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   min-height: 100vh;
-  background-image: url("../assets/hero/hero-img.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  padding: 0 72px;
 }
 .hero-text-wrapper {
   display: flex;
@@ -112,11 +113,11 @@ nav ul li a:hover {
   color: white;
 }
 .hero-text-wrapper p {
-  font-size: 36px;
+  font-size: 32px;
   font-weight: 600;
 }
 .hero-text-wrapper h1 {
-  font-size: 48px;
+  font-size: 36px;
   font-weight: 700;
 }
 .hero-text-wrapper h1 span {
@@ -128,6 +129,7 @@ nav ul li a:hover {
   align-items: center;
   margin-top: 12px;
 }
+/* short info */
 .shortInfo-wrapper {
   display: flex;
   justify-content: space-evenly;
@@ -149,4 +151,133 @@ nav ul li a:hover {
 .shortInfo p {
   font-size: 20px;
   font-weight: 400;
+}
+
+/* about */
+#about {
+  overflow-y: hidden;
+  position: relative;
+}
+.about-wrapper {
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 80px 72px;
+  gap: 150px;
+}
+.about-absolute-logo {
+  position: absolute;
+  top: 75px;
+  left: 550px;
+  z-index: 1000;
+  width: 80px;
+  height: 42px;
+  transform: rotate(-14.347deg);
+}
+.about-img-wrapper {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.about-img-wrapper img {
+  width: 450px;
+  height: 450px;
+  object-fit: cover;
+  padding: 20px 20px 28px 20px;
+  background-color: white;
+  box-shadow: 0px 410px 115px 0px rgba(64, 64, 64, 0),
+    0px 263px 105px 0px rgba(64, 64, 64, 0.01),
+    0px 148px 89px 0px rgba(64, 64, 64, 0.05),
+    0px 66px 66px 0px rgba(64, 64, 64, 0.09),
+    0px 16px 36px 0px rgba(64, 64, 64, 0.1);
+}
+.about-img-wrapper h1 {
+  font-size: 32px;
+  font-weight: 600;
+  color: var(--black);
+  padding: 16px 20px 36px 20px;
+  background-color: white;
+  box-shadow: 0px 410px 115px 0px rgba(64, 64, 64, 0),
+    0px 263px 105px 0px rgba(64, 64, 64, 0.01),
+    0px 148px 89px 0px rgba(64, 64, 64, 0.05),
+    0px 66px 66px 0px rgba(64, 64, 64, 0.09),
+    0px 16px 36px 0px rgba(64, 64, 64, 0.1);
+}
+.about-text-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 36px;
+}
+.about-text-title-wrapper h1 {
+  color: var(--text);
+  font-size: 36px;
+  font-weight: 700;
+}
+.about-text-title-wrapper h1 span {
+  color: #ffbf35;
+}
+.about-text-details-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+.about-text-detail {
+  display: flex;
+  gap: 8px;
+  flex-direction: column;
+  color: var(--text);
+  padding: 24px;
+  border: 1px solid var(--grey);
+  border-radius: 12px;
+}
+.about-text-detail h3 {
+  font-size: 24px;
+  font-weight: 500;
+}
+.about-text-detail p {
+  font-size: 14px;
+  font-weight: 400;
+}
+.about-absolute-vector {
+  position: absolute;
+  bottom: 25px;
+  right: 30px;
+  width: 160px;
+  height: 24px;
+  z-index: 1000;
+}
+/* footer */
+.footer-wrapper {
+  padding: 81px 71px 33px 125px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 414px;
+  color: var(--text);
+}
+.GDSC-footer-wrapper {
+  width: 443px;
+  height: 233px;
+}
+.logo-footer-wrapper {
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+  font-size: 28px;
+}
+.text-footer-wrapper {
+  padding-top: 80px;
+  font-size: 24px;
+}
+.Quick-footer-wrapper {
+  width: 212px;
+  height: 236px;
+}
+.power-footer-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
