--- a/style.css
+++ b/style.css
@@ -40,13 +40,13 @@ body {
   cursor: pointer;
 }
 .button-secondary {
-  background-color: none;
-  color: white;
-  font-size: 16px;
+  background-color: white;
+  color: var(--blue-500);
+  font-size: 18px;
   font-weight: 500;
-  border: 1px solid white;
-  padding: 12px 16px;
-  border-radius: 8px;
+  border: 1px solid var(--blue-500);
+  border-radius: 24px;
+  padding: 8px 24px;
   cursor: pointer;
 }
 /* navbar */
@@ -246,18 +246,146 @@ nav ul li a:hover {
   height: 24px;
   z-index: 1000;
 }
-/* footer */
-.footer-wrapper {
-  padding: 81px 71px 33px 125px;
-  display: inline-flex;
+/* events */
+.events-upcoming-wrapper {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: flex-end;
-  gap: 414px;
+  text-align: center;
+  min-height: 100vh;
+  padding: 72px 200px;
+  gap: 72px;
+  background-color: white;
+}
+.event-img-text-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.event-text-wrapper {
+  gap: 24px;
+}
+.event-text-wrapper h1 {
+  color: var(--blue-500);
+  font-size: 36px;
+  font-weight: 700;
+}
+.event-text-wrapper p {
+  color: var(--text);
+  font-size: 28px;
+  font-weight: 400;
+}
+.event-upcoming-cards-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.event-upcoming-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
+  gap: 100px;
+  border-radius: 12px;
+  border: 1px solid var(--line-stroke);
+}
+.event-upcoming-card-text {
+  display: flex;
+  gap: 32px;
+}
+.event-upcoming-text-calendar {
+  display: flex;
+  flex-direction: column;
+  padding: 16px 8px;
+}
+.event-upcoming-text-calendar h3 {
+  color: var(--blue-500);
+  background: var(--background);
+  font-size: 16px;
+  font-weight: 400;
+}
+.event-upcoming-text-calendar h1 {
+  color: var(--blue-500);
+  background: var(--background);
+  font-size: 32px;
+  font-weight: 700;
+}
+.event-upcoming-text-calendar p {
+  background: var(--blue-500);
+  color: var(--background);
+  font-size: 16px;
+  font-weight: 400;
+  padding: 8px;
+}
+.event-upcoming-text-name {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.event-upcoming-text-name-key {
+  display: flex;
+  gap: 24px;
+}
+.event-upcoming-text-name-key p {
+  padding: 8px;
+  border-radius: 12px;
+  border: 1px solid var(--blue-500);
+  color: var(--blue-500);
+  font-size: 12px;
+  font-weight: 400;
+}
+.event-upcoming-text-name-title {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
   color: var(--text);
 }
+.event-upcoming-text-name-title-place {
+  display: flex;
+  gap: 12px;
+  color: #797979;
+  font-size: 18px;
+  font-weight: 400;
+}
+.event-upcoming-text-name-button{
+  display: flex;
+  gap: 24px;
+}
+
+/* footer */
+footer {
+  /* width: 1920px;
+  height: 350px;
+  flex-shrink: 0; */
+  background: #fff;
+  display: inline-flex;
+  padding: 42px 98px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.footer-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  gap: 410px;
+} 
 .GDSC-footer-wrapper {
-  width: 443px;
-  height: 233px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 80px;
+}
+
+
+/* .GDSC-footer-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 80px;
 }
 .logo-footer-wrapper {
   display: inline-flex;
@@ -266,6 +394,7 @@ nav ul li a:hover {
   align-items: center;
   gap: 32px;
   font-size: 28px;
+  font-weight: 500;
 }
 .text-footer-wrapper {
   padding-top: 80px;
@@ -275,9 +404,19 @@ nav ul li a:hover {
   width: 212px;
   height: 236px;
 }
+.text-quick-footer-wrapper {
+  font-size: 28px;
+  font-weight: 500;
+}
+.list-quick-footer-wrapper {
+  font-size: 20px;
+  font-weight: 500;
+}
 .power-footer-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 10px;
-}
+  font-size: 24px;
+  font-weight: 500;
+} */
