--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
   cursor: pointer;
 }
 .button-secondary {
-  background-color: white;
+  background-color: nonoe;
   color: var(--blue-500);
   font-size: 18px;
   font-weight: 500;
@@ -247,6 +247,12 @@ nav ul li a:hover {
   z-index: 1000;
 }
 /* events */
+#events {
+  overflow-y: hidden;
+  overflow-x: hidden;
+  position: relative;
+}
+/* upcoming-events */
 .events-upcoming-wrapper {
   display: flex;
   flex-direction: column;
@@ -282,7 +288,7 @@ nav ul li a:hover {
 }
 .event-upcoming-card {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   padding: 16px;
   gap: 100px;
@@ -324,10 +330,10 @@ nav ul li a:hover {
 }
 .event-upcoming-text-name-key {
   display: flex;
-  gap: 24px;
+  gap: 8px;
 }
 .event-upcoming-text-name-key p {
-  padding: 8px;
+  padding: 4px;
   border-radius: 12px;
   border: 1px solid var(--blue-500);
   color: var(--blue-500);
@@ -347,76 +353,214 @@ nav ul li a:hover {
   font-size: 18px;
   font-weight: 400;
 }
-.event-upcoming-text-name-button{
+.event-upcoming-text-name-button {
   display: flex;
   gap: 24px;
 }
+/* post event */
+.events-post-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  min-height: 100vh;
+  padding: 72px;
+  gap: 72px;
+  background-color: var(--background);
+}
+.events-post-text-img-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.events-post-text{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.events-post-text h1{
+  color: var(--blue-500);
+font-size: 40px;
+font-weight: 700;
+}
+.events-post-text p{
+  color: var(--text);
+font-size: 28px;
+font-weight: 400;
+}
+.card-container{
+  display: flex;
+  gap: 24px;
+  overflow-x: auto;
+}
+.card-container::-webkit-scrollbar{
+  display: flex;
+  gap: 24px;
+  overflow-x: auto;
+  display: none;
 
+}
+.card-event{
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+  gap:24px;
+  border-radius: 16px;
+  border: 1px solid var(--Dark-grey, #BFBFBF);
+  background: #FFF;
+}
+.card-event-text-wrapper{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.card-event-text-wrapper h3{
+  color: var(--blue-700);
+  font-size: 16px;
+  font-weight: 600;
+}
+.card-event-text-location{
+  display: flex;
+  flex-direction: column;
+  color: var(--text);
+  gap: 8px;
+}
+.text-location-icon{
+  display: flex;
+  gap: 12px
+}
+.card-event-join-wrapper{
+  display: flex;
+  justify-content: space-between;
+}
+/* quotes */
+#quotes{
+  position: relative;
+}
+.quotes-wrapper{
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  background: var(--blue-500);
+  padding: 28px 72px;
+}
+.quotes-wrapper p{
+  color: #FFF;
+font-size: 24px;
+font-weight: 400;
+}
+.quotes-button-wrapper{
+  display: flex;
+justify-content: center;
+align-item: center;
+}
+.quotes-wrapper button{
+  border-radius: 8px;
+border: 1px solid #FFF;
+padding: 12px 20px;
+background-color: transparent;
+color: #FFF;
+font-size: 16px;
+font-weight: 500;
+}
+.vector-1{
+  
+}
 /* footer */
-footer {
-  /* width: 1920px;
-  height: 350px;
-  flex-shrink: 0; */
-  background: #fff;
+
+
+
+
+
+/* footer {
   display: inline-flex;
   padding: 42px 98px;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 10px;
-}
-.footer-wrapper {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  gap: 410px;
+  background: #fff;
+  weight:1920px;
+  height: 350px:
 } 
+.footer-wrapper {
+  color: var(--text);
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 410px; 
+  /* width: 1724px;
+  height: 266px; */
+}
 .GDSC-footer-wrapper {
   display: flex;
+  height: 266px;
+  weight: 443px;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  gap: 80px;
-}
-
-
-/* .GDSC-footer-wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   gap: 80px;
 }
 .logo-footer-wrapper {
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 32px;
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 500;
+  line-height: normal;
+  height: 136px;
+  width: 443px;
 }
 .text-footer-wrapper {
-  padding-top: 80px;
-  font-size: 24px;
+  display: flex;
+  padding: 10px;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
+  font-size: 16px;
+  font-weight: 500;
+  width: 200px;
+  height:20px;
 }
 .Quick-footer-wrapper {
-  width: 212px;
-  height: 236px;
+  display: flex;
+  width: 220px;
+  height: 266px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
 }
 .text-quick-footer-wrapper {
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 500;
+  display: flex;
+  padding: 10px;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
 }
 .list-quick-footer-wrapper {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
+  display: flex;
+  width: 217px;
+  padding: 10px 20px;
+  align-items: center;
+  gap: 10px;
 }
 .power-footer-wrapper {
+  font-size: 20px;
+  font-weight: 500;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  font-size: 24px;
-  font-weight: 500;
-} */
+}
+
+
+
+
+
+
+ */
