--- a/style.css
+++ b/style.css
@@ -580,9 +580,9 @@ nav ul li a:hover {
 }
 
 .medparts-cols img {
-  width: 100%; 
-    height: auto; 
-    object-fit: cover; 
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 .medparts-text-wrapper {
   position: relative;
@@ -605,24 +605,68 @@ nav ul li a:hover {
   }
 }
 /* gallery */
+#gallery {
+  position: relative;
+}
+.gallery-wrapper {
+  display: flex;
+  min-height: 100vh;
+  padding: 100px 72px;
+  background-color: var(--background);
+  justify-content: center;
+  align-items: center;
+}
+.gallery-card {
+  display: flex;
+  flex-direction: column;
+  padding: 56px 24px 72px 24px;
+  background-color: white;
+  border-radius: 12px;
+  border: 2px solid var(--line-stroke);
+  box-shadow: 0px 589px 165px 0px rgba(55, 55, 55, 0),
+    0px 377px 151px 0px rgba(55, 55, 55, 0.01),
+    0px 212px 127px 0px rgba(55, 55, 55, 0.05),
+    0px 94px 94px 0px rgba(55, 55, 55, 0.09),
+    0px 24px 52px 0px rgba(55, 55, 55, 0.1);
+  gap: 40px;
+}
+.gallery-card-img {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
+.gallery-text-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+.gallery-text-title-wrapper {
+  display: flex;
+  gap: 12px;
+  color: var(--Primary500, #4286f5);
+  font-weight: 700;
+}
+
 /* footer */
 footer {
   display: flex;
   background: #fff;
-  padding: 40px 80px;
+  padding: 30px 40px;
 }
 .footer-wrapper {
   color: var(--text);
   display: flex;
-  gap: 232px;
+  gap: 285px;
+  height: 240px;
+  weight: 1840px;
 }
 .GDSC-footer-wrapper {
   display: flex;
-  height: 266px;
-  weight: 443px;
   flex-direction: column;
   justify-content: center;
-  gap: 85px;
+  gap: 80px;
 }
 .logo-footer-wrapper {
   display: flex;
@@ -663,7 +707,6 @@ footer {
   flex-direction: column;
   align-items: flex-start;
   gap: 4px;
-  
 }
 .list-quick-footer-wrapper p {
   font-size: 16px;
@@ -680,7 +723,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  bottom: 0; 
-  right: 0; 
+  bottom: 0;
+  right: 0;
   padding: 220px 0 0 0;
 }
